--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -314,8 +314,8 @@
         <h4 class="plugin_summary">Easy Podcasting Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_podcast</dt>
-            <dd class="plugin_version">Version 1.38 (GPL, Last Updated 2017-07-22)</dd>
-            <dd class="plugin_maintainers">Grischa Brockhaus, Hannes Gassert, Garvin Hicking</dd>
+            <dd class="plugin_version">Version 1.39 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_maintainers">Grischa Brockhaus, Hannes Gassert, Garvin Hicking, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Adds &quot;podcasting&quot; capabilities hinzu (RSS enclosure, Video/Sound-Player)</p>
@@ -394,7 +394,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 2.36 (GPL, Last Updated 2017-11-27)</dd>
+            <dd class="plugin_version">Version 2.37 (GPL, Last Updated 2018-03-27)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -458,7 +458,7 @@
         <h4 class="plugin_summary">Show Emoticon/Smiley toolbar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_emoticonchooser</dt>
-            <dd class="plugin_version">Version 3.08 (GPL, Last Updated 2018-03-24)</dd>
+            <dd class="plugin_version">Version 3.09 (GPL, Last Updated 2018-03-27)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jay Bertrandt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -793,7 +793,7 @@
         <h4 class="plugin_summary">POPfetcher</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_popfetcher</dt>
-            <dd class="plugin_version">Version 1.48 (GPL, Last Updated 2017-03-14)</dd>
+            <dd class="plugin_version">Version 1.49 (GPL, Last Updated 2018-03-27)</dd>
             <dd class="plugin_maintainers">Jason Levitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -857,14 +857,15 @@
         <h4 class="plugin_summary">SMTP Mail</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_smtpmail</dt>
-            <dd class="plugin_version">Version 0.11 (GPL, Last Updated 2016-07-07)</dd>
-            <dd class="plugin_maintainers">kleinerChemiker</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.3</dd>
+            <dd class="plugin_version">Version 1.00 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_maintainers">kleinerChemiker, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Use a SMTP server to send your mails</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_smtpmail.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_smtpmail">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_smtpmail/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -1346,7 +1347,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 2.36 (GPL, Last Updated 2017-11-27)</dd>
+            <dd class="plugin_version">Version 2.37 (GPL, Last Updated 2018-03-27)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1524,8 +1525,8 @@
         <h4 class="plugin_summary">Show social share buttons for services like Facebook and Twitter</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_findmore</dt>
-            <dd class="plugin_version">Version 1.24 (GPL, Last Updated 2016-08-27)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Kodewulf</dd>
+            <dd class="plugin_version">Version 1.25 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Kodewulf, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Plugin DEPRECATED. Move along to the new event_social plugin! You can remove/insert other custom services to link to via the &quot;plugin_findmore.tpl&quot; template file easily. Also remember that if you want to save grandma's performance pennies that you can also insert the HTML/JS snippets into your entries.tpl template file instead of using this plugin!</p>
@@ -1572,9 +1573,9 @@
         <h4 class="plugin_summary">flickr Photostream CSS</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_flickrcss</dt>
-            <dd class="plugin_version">Version 1.06 (GPL, Last Updated 2017-03-22)</dd>
-            <dd class="plugin_maintainers">Michael Kaiser</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.07 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_maintainers">Michael Kaiser, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">This plugin is an extension to the flickr Photostream sidebar plugin and adds style information (CSS).</p>
         <ul class="plugin_actions">
@@ -1752,7 +1753,7 @@
         <h4 class="plugin_summary">ToDo/Project-List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_todolist</dt>
-            <dd class="plugin_version">Version 1.29 (GPL, Last Updated 2017-10-06)</dd>
+            <dd class="plugin_version">Version 1.30 (GPL, Last Updated 2018-03-27)</dd>
             <dd class="plugin_maintainers">Steven Tonnesen, Matthias Mees, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1882,9 +1883,9 @@
         <h4 class="plugin_summary">RSS Aggregator</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_aggregator</dt>
-            <dd class="plugin_version">Version 0.44 (GPL (MagpieRSS) or BSD (Onyx) or BSD-3 (SimplePie), Last Updated 2018-02-05)</dd>
+            <dd class="plugin_version">Version 1.00 (GPL (IDN converter) or BSD (Onyx) or BSD-3 (SimplePie), Last Updated 2018-03-27)</dd>
             <dd class="plugin_maintainers">Evan Nemerson, Garvin Hicking, Kristian Koehntopp, Thomas Schulz, Claus Schmidt, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.2</dd>
         </dl>
         <p class="plugin_description">Display entries from multiple RSS feeds (&quot;Planet&quot;). IMPORTANT NOTE: Updating and &quot;feeding&quot; your Aggregator must currently still happen manually via Cronjobs or similar. Call this URL with your custom timing interval: index.php?/plugin/aggregator</p>
         <ul class="plugin_actions">
@@ -2161,7 +2162,7 @@
         <h4 class="plugin_summary">Gallery Display</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_usergallery</dt>
-            <dd class="plugin_version">Version 2.68 (GPL, Last Updated 2017-02-02)</dd>
+            <dd class="plugin_version">Version 2.69 (GPL, Last Updated 2018-03-27)</dd>
             <dd class="plugin_maintainers">Arnan de Gans, Matthew Groeninger, and Stefan Willoughby, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2435,8 +2436,8 @@
         <h4 class="plugin_summary">Markup: Mobile Output</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mobile_output</dt>
-            <dd class="plugin_version">Version 1.07 (GPL, Last Updated 2018-03-07)</dd>
-            <dd class="plugin_maintainers">Pelle Boese, Grischa Brockhaus</dd>
+            <dd class="plugin_version">Version 1.08 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_maintainers">Pelle Boese, Grischa Brockhaus; iAN</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">This plugin handles mobile devices and outputs optimized XHTML MP markup if it detects a mobile browser and a specially optimized site for iPhone and iPod Touch. It also scales images to fit the display size.</p>
