--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -276,9 +276,9 @@
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2017-03-22)</dd>
-            <dd class="plugin_maintainers">Michael Kaiser</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_maintainers">Michael Kaiser, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Display the latest photos from flickr Photostreams.</p>
         <ul class="plugin_actions">
@@ -699,9 +699,9 @@
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2017-03-22)</dd>
-            <dd class="plugin_maintainers">Michael Kaiser</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_maintainers">Michael Kaiser, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Display the latest photos from flickr Photostreams.</p>
         <ul class="plugin_actions">
