--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -70,8 +70,8 @@
         <h4 class="plugin_summary">Recaptcha</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_recaptcha</dt>
-            <dd class="plugin_version">Version 0.32 (GPL, Last Updated 2018-03-24)</dd>
-            <dd class="plugin_maintainers">Christian Brabandt (based on work of Garvin Hicking, Sebastian Nohn), Garvin, @th-h, Ian</dd>
+            <dd class="plugin_version">Version 0.33 (GPL, Last Updated 2018-03-29)</dd>
+            <dd class="plugin_maintainers">Christian Brabandt (based on work of Garvin Hicking, Sebastian Nohn), Garvin Hicking, Thomas Hochstein, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Enabling a recaptcha for commenting articles (You need to apply for a key)</p>
@@ -676,6 +676,22 @@
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dbclean.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dbclean">GitHub</a></li>
             <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_dbclean/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
+    <div id="serendipity_event_dsgvo_gpdr" class="plugin">
+        <h4 class="plugin_summary">DSGVO / GPDR: General Data Protection Regulation</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_dsgvo_gpdr</dt>
+            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2018-03-29)</dd>
+            <dd class="plugin_maintainers">Serendipity Team</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+        </dl>
+        <p class="plugin_description">This plugin aims to help blog owners apply conformity to the General Data Protection Regulation Act.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gpdr.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gpdr">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_dsgvo_gpdr/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -1621,6 +1637,22 @@
         </ul>
     </div>
 
+    <div id="serendipity_event_dsgvo_gpdr" class="plugin">
+        <h4 class="plugin_summary">DSGVO / GPDR: General Data Protection Regulation</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_dsgvo_gpdr</dt>
+            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2018-03-29)</dd>
+            <dd class="plugin_maintainers">Serendipity Team</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+        </dl>
+        <p class="plugin_description">This plugin aims to help blog owners apply conformity to the General Data Protection Regulation Act.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gpdr.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gpdr">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_dsgvo_gpdr/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
     <div id="serendipity_event_cal" class="plugin">
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
@@ -2114,7 +2146,7 @@
         <h4 class="plugin_summary">Avatar Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_gravatar</dt>
-            <dd class="plugin_version">Version 1.66 (GPL, Last Updated 2017-11-03)</dd>
+            <dd class="plugin_version">Version 1.67 (GPL, Last Updated 2018-03-29)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
