--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -679,19 +679,19 @@
         </ul>
     </div>
 
-    <div id="serendipity_event_dsgvo_gpdr" class="plugin">
-        <h4 class="plugin_summary">DSGVO / GPDR: General Data Protection Regulation</h4>
+    <div id="serendipity_event_dsgvo_gdpr" class="plugin">
+        <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
-            <dt class="plugin_name">serendipity_event_dsgvo_gpdr</dt>
-            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2018-03-29)</dd>
+            <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
+            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2018-03-30)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin aims to help blog owners apply conformity to the General Data Protection Regulation Act.</p>
         <ul class="plugin_actions">
-            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gpdr.zip">Download</a></li>
-            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gpdr">GitHub</a></li>
-            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_dsgvo_gpdr/ChangeLog">ChangeLog</a></li>
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gdpr.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gdpr">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_dsgvo_gdpr/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -1637,19 +1637,19 @@
         </ul>
     </div>
 
-    <div id="serendipity_event_dsgvo_gpdr" class="plugin">
-        <h4 class="plugin_summary">DSGVO / GPDR: General Data Protection Regulation</h4>
+    <div id="serendipity_event_dsgvo_gdpr" class="plugin">
+        <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
-            <dt class="plugin_name">serendipity_event_dsgvo_gpdr</dt>
-            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2018-03-29)</dd>
+            <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
+            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2018-03-30)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin aims to help blog owners apply conformity to the General Data Protection Regulation Act.</p>
         <ul class="plugin_actions">
-            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gpdr.zip">Download</a></li>
-            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gpdr">GitHub</a></li>
-            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_dsgvo_gpdr/ChangeLog">ChangeLog</a></li>
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gdpr.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gdpr">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_dsgvo_gdpr/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
