--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -132,9 +132,9 @@
         <h4 class="plugin_summary">Spamblock (Bayes)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bayes</dt>
-            <dd class="plugin_version">Version 0.4.31 (GPL, Last Updated 2018-03-07)</dd>
-            <dd class="plugin_maintainers">kleinerChemiker, Malte Paskuda, based upon b8 by Tobias Leupold</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_version">Version 1.02 (GPL, Last Updated 2018-03-30)</dd>
+            <dd class="plugin_maintainers">kleinerChemiker, Malte Paskuda, based upon b8 by Tobias Leupold, Mario Hommmel, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.1.2</dd>
         </dl>
         <p class="plugin_description">Detects Spam via an algorithmus which learns.</p>
         <ul class="plugin_actions">
@@ -683,11 +683,11 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2018-03-30)</dd>
+            <dd class="plugin_version">Version 1.21 (GPL, Last Updated 2018-03-30)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">This plugin aims to help blog owners apply conformity to the General Data Protection Regulation Act.</p>
+        <p class="plugin_description">This plugin aims to help blog owners to apply conformity to the General Data Protection Regulation Act.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gdpr.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gdpr">GitHub</a></li>
@@ -1573,8 +1573,8 @@
         <h4 class="plugin_summary">dejure.org automatic linking</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dejure</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2017-07-09)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Bjoern Urban, dejure.org, Thomas Hochstein, Ian</dd>
+            <dd class="plugin_version">Version 1.11 (GPL, Last Updated 2018-03-30)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, dejure.org, Thomas Hochstein, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Automatically links quoted statues and judicature (references and source of information) with contents of dejure.org.</p>
@@ -1641,11 +1641,11 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2018-03-30)</dd>
+            <dd class="plugin_version">Version 1.21 (GPL, Last Updated 2018-03-30)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">This plugin aims to help blog owners apply conformity to the General Data Protection Regulation Act.</p>
+        <p class="plugin_description">This plugin aims to help blog owners to apply conformity to the General Data Protection Regulation Act.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dsgvo_gdpr.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dsgvo_gdpr">GitHub</a></li>
