--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -70,7 +70,7 @@
         <h4 class="plugin_summary">Recaptcha</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_recaptcha</dt>
-            <dd class="plugin_version">Version 0.33 (GPL, Last Updated 2018-03-29)</dd>
+            <dd class="plugin_version">Version 0.33 (GPL, Last Updated 2018-03-31)</dd>
             <dd class="plugin_maintainers">Christian Brabandt (based on work of Garvin Hicking, Sebastian Nohn), Garvin Hicking, Thomas Hochstein, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -683,7 +683,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.23 (GPL, Last Updated 2018-03-30)</dd>
+            <dd class="plugin_version">Version 1.24 (GPL, Last Updated 2018-03-31)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1557,7 +1557,7 @@
         <h4 class="plugin_summary">Sitemap Generator (for Crawlers)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_google_sitemap</dt>
-            <dd class="plugin_version">Version 0.61 (GPL, Last Updated 2018-03-07)</dd>
+            <dd class="plugin_version">Version 0.61 (GPL, Last Updated 2018-03-31)</dd>
             <dd class="plugin_maintainers">Boris</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1641,7 +1641,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.23 (GPL, Last Updated 2018-03-30)</dd>
+            <dd class="plugin_version">Version 1.24 (GPL, Last Updated 2018-03-31)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2146,11 +2146,11 @@
         <h4 class="plugin_summary">Avatar Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_gravatar</dt>
-            <dd class="plugin_version">Version 1.67 (GPL, Last Updated 2018-03-29)</dd>
+            <dd class="plugin_version">Version 1.68 (GPL, Last Updated 2018-03-31)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
-        <p class="plugin_description">Show avatars inside comments. Gravatars, Pavatars, Favatars, Twitter and Identica avatars are supported.</p>
+        <p class="plugin_description">Show Avatars inside comments. Gravatars, Pavatars, Favatars, Wavatars, Monster ID, Identicon, Twitter and Identica Avatars are supported.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_gravatar.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_gravatar">GitHub</a></li>
