--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -90,14 +90,15 @@
         <h4 class="plugin_summary">Feedburner Sidebar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_feedburnersidebar</dt>
-            <dd class="plugin_version">Version 1.0 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2018-04-03)</dd>
             <dd class="plugin_maintainers">Aaron Axelsen</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.2.1</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Adds assorted functionality of the feedburner service into the sidebar.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_feedburnersidebar.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_feedburnersidebar">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_feedburnersidebar/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -169,14 +170,15 @@
         <h4 class="plugin_summary">Google Quicksearch</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_google_quicksearch</dt>
-            <dd class="plugin_version">Version 1.5 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2018-04-03)</dd>
             <dd class="plugin_maintainers">Wesley Hwang-Chung</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Search for an entry (Google)</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_google_quicksearch.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_google_quicksearch">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_google_quicksearch/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -261,14 +263,15 @@
         <h4 class="plugin_summary">Wikipedia Finder</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_wikipedia_finder</dt>
-            <dd class="plugin_version">Version 1.4 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.5 (GPL, Last Updated 2018-04-03)</dd>
             <dd class="plugin_maintainers">Serendipity Team</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Highlight a phrase and click the icon to search on using Wikipedia.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_wikipedia_finder.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_wikipedia_finder">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_wikipedia_finder/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -344,7 +347,7 @@
         <h4 class="plugin_summary">Quick Link</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_quicklink</dt>
-            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2016-10-24)</dd>
+            <dd class="plugin_version">Version 0.9 (GPL, Last Updated 2018-04-03)</dd>
             <dd class="plugin_maintainers">Omid Mottaghi Rad</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -352,6 +355,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_quicklink.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_quicklink">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_quicklink/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -359,7 +363,7 @@
         <h4 class="plugin_summary">Shoutbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_shoutbox</dt>
-            <dd class="plugin_version">Version 1.03 (GPL, Last Updated 2017-11-04)</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-04-03)</dd>
             <dd class="plugin_maintainers">Matthias Lange, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -367,6 +371,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_shoutbox.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_shoutbox">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_shoutbox/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -424,9 +429,9 @@
         <h4 class="plugin_summary">AdSense</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_google_adsense</dt>
-            <dd class="plugin_version">Version 0.3 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2018-04-03)</dd>
             <dd class="plugin_maintainers">Jim Dabell</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Displays adverts from Google.</p>
         <ul class="plugin_actions">
@@ -633,7 +638,7 @@
         <h4 class="plugin_summary">Twitter Timeline</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_twitter</dt>
-            <dd class="plugin_version">Version 1.70 (GPL, Last Updated 2017-07-22)</dd>
+            <dd class="plugin_version">Version 1.71 (GPL, Last Updated 2017-07-22)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Damian Luszczymak, Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
