--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -70,7 +70,7 @@
         <h4 class="plugin_summary">Recaptcha</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_recaptcha</dt>
-            <dd class="plugin_version">Version 0.33 (GPL, Last Updated 2018-03-31)</dd>
+            <dd class="plugin_version">Version 0.34 (GPL, Last Updated 2018-04-09)</dd>
             <dd class="plugin_maintainers">Christian Brabandt (based on work of Garvin Hicking, Sebastian Nohn), Garvin Hicking, Thomas Hochstein, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -459,7 +459,7 @@
         <h4 class="plugin_summary">Show Emoticon/Smiley toolbar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_emoticonchooser</dt>
-            <dd class="plugin_version">Version 3.09 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_version">Version 3.10 (GPL, Last Updated 2018-04-09)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jay Bertrandt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -490,11 +490,11 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.37 (GPL, Last Updated 2017-10-21)</dd>
+            <dd class="plugin_version">Version 5.38 (GPL, Last Updated 2018-04-09)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
-        <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formattings. Adds a new menu item to the admin interface.</p>
+        <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formatting. Adds a new menu item to the admin interface.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_staticpage.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_staticpage">GitHub</a></li>
@@ -906,11 +906,11 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.37 (GPL, Last Updated 2017-10-21)</dd>
+            <dd class="plugin_version">Version 5.38 (GPL, Last Updated 2018-04-09)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
-        <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formattings. Adds a new menu item to the admin interface.</p>
+        <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formatting. Adds a new menu item to the admin interface.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_staticpage.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_staticpage">GitHub</a></li>
@@ -1119,22 +1119,6 @@
 
 <section id="group_BACKEND_USERMANAGEMENT" class="spartacus-group">
     <h3>Backend: Usermanagement</h3>
-    <div id="serendipity_event_browserid" class="plugin">
-        <h4 class="plugin_summary">BrowserID Authentication</h4>
-        <dl class="plugin_meta">
-            <dt class="plugin_name">serendipity_event_browserid</dt>
-            <dd class="plugin_version">Version 1.3 (GPL, Last Updated 2018-04-06)</dd>
-            <dd class="plugin_maintainers">Grischa Brockhaus</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
-        </dl>
-        <p class="plugin_description">Allows authors to authenticate using the BrowserID service.</p>
-        <ul class="plugin_actions">
-            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_browserid.zip">Download</a></li>
-            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_browserid">GitHub</a></li>
-            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_browserid/ChangeLog">ChangeLog</a></li>
-        </ul>
-    </div>
-
     <div id="serendipity_event_externalauth" class="plugin">
         <h4 class="plugin_summary">External user authentication (LDAP)/tracking</h4>
         <dl class="plugin_meta">
